--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
+:root::-webkit-scrollbar{
+  display: none;
+}
+
+:root{
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
